force-app/main/default/objects/FieldByAccount__c/FieldByAccount__c.object-meta.xml
<CustomObject>
    <label>個社別項目</label>
    <nameField>
        <displayFormat>FA-{000000}</displayFormat>
        <label>個社別項目番号</label>
        <type>AutoNumber</type>
    </nameField>
    <sharingModel>Private</sharingModel>
</CustomObject>