force-app/main/default/objects/FieldByAccount__c/fields/ConditionChange__c.field-meta.xml
<CustomField>
    <fullName>ConditionChange__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>条件変更</label>
    <referenceTo>ConditionChange__c</referenceTo>
    <relationshipLabel>個社別項目</relationshipLabel>
    <relationshipName>RelationConditionChangeFieldByAccount</relationshipName>
    <type>Lookup</type>
</CustomField>