force-app/main/default/objects/FieldByAccount__c/fields/CurrencyValue__c.field-meta.xml
<CustomField>
    <fullName>CurrencyValue__c</fullName>
    <label>項目値（通貨）</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>