force-app/main/default/objects/FieldByAccount__c/fields/DecisionApplication2__c.field-meta.xml
<CustomField>
    <fullName>DecisionApplication2__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>決裁申請2</label>
    <referenceTo>DecisionApplication2__c</referenceTo>
    <relationshipLabel>個社別項目</relationshipLabel>
    <relationshipName>RelationDA2FieldByAccount</relationshipName>
    <type>Lookup</type>
</CustomField>