force-app/main/default/objects/FieldByAccount__c/fields/FieldByAccountName__c.field-meta.xml
<CustomField>
    <fullName>FieldByAccountName__c</fullName>
    <label>個社別項目名</label>
    <length>255</length>
    <type>Text</type>
</CustomField>