force-app/main/default/objects/FieldByAccount__c/fields/FifthSetConfirm__c.field-meta.xml
<CustomField>
    <fullName>FifthSetConfirm__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>5点確定</label>
    <referenceTo>FifthSetConfirm__c</referenceTo>
    <relationshipLabel>個社別項目</relationshipLabel>
    <relationshipName>us3b</relationshipName>
    <type>Lookup</type>
</CustomField>