force-app/main/default/objects/FieldByAccount__c/fields/FiledMasterByAccount__c.field-meta.xml
<CustomField>
    <fullName>FiledMasterByAccount__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>個社別項目マスタ</label>
    <referenceTo>FieldMasterByAccount__c</referenceTo>
    <relationshipLabel>個社別項目</relationshipLabel>
    <relationshipName>hlNL</relationshipName>
    <type>Lookup</type>
</CustomField>