force-app/main/default/objects/FieldByAccount__c/fields/IsDecisionApplicationField__c.field-meta.xml
<CustomField>
    <fullName>IsDecisionApplicationField__c</fullName>
    <defaultValue>false</defaultValue>
    <label>決裁申請項目</label>
    <type>Checkbox</type>
</CustomField>