force-app/main/default/objects/FieldByAccount__c/fields/IsRealEstateRelation__c.field-meta.xml
<CustomField>
    <fullName>IsRealEstateRelation__c</fullName>
    <defaultValue>false</defaultValue>
    <label>物件紐づけ済み</label>
    <type>Checkbox</type>
</CustomField>