force-app/main/default/objects/FieldByAccount__c/fields/IsTarget__c.field-meta.xml
<CustomField>
    <fullName>IsTarget__c</fullName>
    <formula>AND(
 ChangeDate__c   &lt;=  TODAY(),
 IsRealEstateRelation__c  = FALSE,
 IsApproved__c = TRUE,
 IsRealEstateField__c = TRUE)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>更新対象</label>
    <type>Checkbox</type>
</CustomField>