force-app/main/default/objects/FieldByAccount__c/fields/PickListValue__c.field-meta.xml
<CustomField>
    <fullName>PickListValue__c</fullName>
    <label>項目値（選択リスト）</label>
    <length>255</length>
    <type>Text</type>
</CustomField>