force-app/main/default/objects/FieldByAccount__c/fields/TextValue__c.field-meta.xml
<CustomField>
    <fullName>TextValue__c</fullName>
    <label>項目値（テキスト）</label>
    <length>255</length>
    <type>Text</type>
</CustomField>