force-app/main/default/objects/FieldByAccount__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>FieldByAccountName__c</columns>
    <columns>ChangeDate__c</columns>
    <columns>IsTarget__c</columns>
    <columns>RealEstate__c</columns>
    <columns>RealEstateId__c</columns>
    <columns>IsRealEstateRelation__c</columns>
    <columns>LAST_UPDATE</columns>
    <columns>NskLink__c</columns>
    <filterScope>Everything</filterScope>
    <label>すべて選択</label>
</ListView>